--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
+    "vuejs-datepicker": "^1.5.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
